# karst-terrain-classification

./: .dockerignore  .gitignore  .markdownlint-cli2.jsonc  Containerfile  README.md  environment.yml  pyproject.toml
data/processed/minimal_exploration/: testbed_cv_results.npy  testbed_features_betti100.npy  testbed_features_betti200.npy  testbed_features_ecc200.npy  testbed_features_ecc50.npy  testbed_features_landscape.npy  testbed_features_persimage.npy  testbed_features_ph_directional.npy  testbed_features_traditional.npy  testbed_labels.npy  testbed_summary.md  testbed_timing.npy
docs/: gacrc-access.md  proposal.md
docs/literature/: compass_artifact_wf-00716190-ad42-4c87-a495-27efa3a64aa4_text_markdown.md
docs/literature/052626/: 1.md
docs/literature/100526/: 0.md  1.md  2.md  3.md  4.md  5.md
docs/presentation/: PRESENTATION.tex
docs/presentation/critique_and_plan/: CRITICAL_REVIEW.md  EXECUTIVE_BRIEFING.md  IMPLEMENTATION_TIMELINE.md  README.md  VISUALIZATION_GUIDE.md
docs/presentation/geog_6591_final_presentation/: DIAGNOSIS_AND_FIX.md  FINAL_TIKZ_FIX.md  TIKZ_DEBUG_STEPS.md  TIKZ_FIX_README.md  beamer-blocks.scss  check_tikz_dependencies.ps1  custom.scss  presentation.html  presentation.qmd  references.bib  test_tikz.html  test_tikz.qmd
docs/presentation/math_drp_presentation/: PRESENTATION.aux  PRESENTATION.fdb_latexmk  PRESENTATION.fls  PRESENTATION.out  PRESENTATION.tex  PRESENTATION.toc  presentation.nav
docs/report/: COMPLETE_STATISTICAL_INTERPRETATION.md  Feature_Computation_Design.md  Final Project.md  Final_Instructions.ipynb  Final_Report.ipynb  Future Directions.md  PresentationCriterion.md  STATISTICAL_EXEC_SUMMARY.md  TDA_Design_Rationale.md  final_project_summary.qmd
docs/topo_eval/: _evaluation_conventions.md
docs/topo_eval/notes/: folklore_check.md  m2_distributional_gate.md  m2_headline_result.md  m2_optical_contrast_result.md  m2_power_result.md  m2_reference_forward_feed.md  m2_saddle_stable_prereg.md  m2_substrate_comparability.md  orientation_spike.md  phase_c_postmortem.md  proof_obligations_referee.md
docs/topo_eval/proofs/: strahler_merge_tree.qmd
notebooks/: create_environment.ipynb
notebooks/Scratch/: 20251029.ipynb  20251105.ipynb  dem_to_numpy_array-Michael-PC.ipynb  dem_to_numpy_array.ipynb  preprocessing.ipynb  process_dems.ipynb
notebooks/minimal_exploration/: compute_features.ipynb  presentation_visuals.ipynb  quick_comparison.ipynb  summary_report.ipynb
paper/: .gitignore  fig_data.py  fig_qual.py  manuscript.qmd  references.bib
paper/_tables/: tbl-construct.md  tbl-headline.md  tbl-optical.md  tbl-sensitivity.md
results/validity/: ceiling.json  m2_construct_by_province.json  m2_floor_ci.json  m2_generated_vs_real.json  m2_noise_vs_real.json  m2_optical_contrast.json  m2_power.json  m2_power_curve.json  m2_pruning_diagnostic.json  m2_raw_movement.json  m2_stabilized_sweep.sbatch  m2power.sbatch  mesa_batch113_manifest.json  mesa_small_manifest.json  substrate_comparability.json
results/validity/m2_diag_cache/: gen_diagrams.pkl  sw_cross_realgen.npy  sw_gen.npy
results/validity/noise_cache/: gen_diagrams.pkl  sw_cross_realgen.npy  sw_gen.npy  sw_matrix.npy
results/validity/teach_run_20260530/: construct.json  resolution_probe.json  (+2 more)
scripts/: _mesa_breach_diag.py  _mesa_precond.py  _mesa_verify.py  _render_smoke.py  m2_construct_by_province.py  m2_floor_ci.py  m2_generated_vs_real.py  m2_optical_contrast.py  m2_optical_embed.py  m2_optical_render.py  m2_power_analysis.py  m2_power_curve.py  m2_power_embed.py  m2_power_perturb.py  m2_pruning_diagnostic.py  m2_raw_movement.py  m2_stabilized.py  make_noise_dems.py  mesa_generate.py  prefetch_embeddings.py  prefetch_tiles.py  pull_glo30.py  render_terrain_rgb.py  resolution_confound_probe.py  saddle_stability_probe.py  select_tiles.py  smoke.py  spike_filtration.py  submit_comparability_teach.sh  submit_m2test_teach.sh  submit_mesa_teach.sh  submit_optical_teach.sh  submit_power_probe_teach.sh  submit_power_teach.sh  submit_teach.sh  substrate_comparability_probe.py  validity_real_ceiling.py  validity_real_construct.py  validity_real_probe.py  validity_toys.py
src/drp_2025fall/: analysis.py  interfaces.py  topology.py
src/earthscape-main/: .gitignore  LICENSE  README.md  earthscape_env_cpu.yml  earthscape_env_cuda.yml
src/geo_tda/: __init__.py  data_sanity_check.py  organize_dems_by_province.py  persistence.py  plotting_utils.py  qaqc.py
src/multiscale_tda_geomorphology.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_stabilized.py
tests/test_topo_eval/: test_adjacency.py  test_falsification.py  test_hydrology.py  test_persistence_roundtrip.py  test_segment_graph.py  test_structural_invariants.py  test_synthetic.py
(+72 files in other folders)
