[project]
name = "karst-terrain-classification"
version = "0.1.0"
description = "Multiscale TDA features for karst terrain classification on DEM rasters."
requires-python = ">=3.11,<3.13"
readme = "README.md"
authors = [{ name = "Michael Kerr", email = "mkerr316@gmail.com" }]
license = { text = "MIT" }

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geo_tda", "src/drp_2025fall"]

# ---------------------------------------------------------------------------
# Pixi configuration
# ---------------------------------------------------------------------------
[tool.pixi.workspace]
name = "karst-terrain-classification"
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "3.11.*"

# Scientific core
numpy = "*"
scipy = "*"
pandas = "*"
scikit-learn = "*"
networkx = "*"

# Geospatial
geopandas = "*"
rasterio = "*"
rioxarray = "*"
xarray = "*"
shapely = "*"
pyproj = "*"
gdal = "*"
fiona = "*"
contextily = "*"
dask = "*"
earthpy = "*"
matplotlib-scalebar = "*"
whitebox = "*"
pystac-client = "*"

# Topological data analysis (conda-forge)
gudhi = "*"
ripser = "*"
persim = "*"

# Visualization
matplotlib = "*"
seaborn = "*"
cmocean = "*"
adjusttext = "*"

# Notebook + utilities
jupyterlab = "*"
ipykernel = "*"
ipywidgets = "*"
tqdm = "*"
tenacity = "*"
requests = "*"
tabulate = "*"
psutil = "*"

# Testing
pytest = "*"

# Build helpers (cripser builds from source)
cmake = "*"
pybind11 = "*"
cxx-compiler = "*"

[tool.pixi.pypi-dependencies]
karst-terrain-classification = { path = ".", editable = true }
planetary-computer = "*"
titlecase = "*"
euchar = "*"
cripser = "*"
# giotto-tda is intentionally not pinned here. Modern giotto-tda (0.6.x)
# has no Python 3.11 wheels, and pip falls back to giotto-tda 0.1.4 which
# tries `sudo make install` during build. Code that uses gtda's
# PersistenceImage / PersistenceLandscape / BettiCurve should migrate to
# the persim equivalents.

# ---------------------------------------------------------------------------
# CUDA feature: native dev on machines with NVIDIA GPUs.
# Uses conda-forge's pytorch-gpu metapackage; requires CUDA 12.x driver.
# ---------------------------------------------------------------------------
[tool.pixi.feature.gpu]
system-requirements = { cuda = "12" }

[tool.pixi.feature.gpu.dependencies]
pytorch-gpu = "*"
torchvision = "*"

# ---------------------------------------------------------------------------
# CPU feature: container image, CI, and machines without NVIDIA hardware.
# ---------------------------------------------------------------------------
[tool.pixi.feature.cpu.dependencies]
pytorch-cpu = "*"
torchvision = "*"

[tool.pixi.environments]
default = { features = ["gpu"], solve-group = "gpu" }
cpu = { features = ["cpu"], solve-group = "cpu" }

# ---------------------------------------------------------------------------
# Tasks: one entry per audience-relevant action.
# ---------------------------------------------------------------------------
[tool.pixi.tasks]
smoke = { cmd = "python scripts/smoke.py", description = "Smoke test (seconds, laptop). Validates the pipeline runs." }
test = { cmd = "pytest -q", description = "Unit tests." }
spike-filtration = { cmd = "python scripts/spike_filtration.py", description = "Phase 0 filtration-orientation spike. Validates the donor-based union-find on D8 flow graph against cubical 8-adjacency and superlevel-decreasing negative controls on three toy DEMs (Y, tributary-contact, meander-neck). Seconds." }
validity-test = { cmd = "pytest -q tests/test_topo_eval", description = "Phase B: run the merge-tree validity test suite (toys, adjacency, falsification, structural invariants, persistence). Seconds." }
validity-toys = { cmd = "python scripts/validity_toys.py", description = "Phase B: produce the toy validity figures (toy zoo, adjacency contamination, falsification witness) into figures/validity/toys/. Seconds." }
lab = { cmd = "jupyter lab --no-browser --ip=0.0.0.0 --port=8888", description = "Run JupyterLab in the foreground." }
kernel = { cmd = "python -m ipykernel install --user --name karst-terrain --display-name 'Karst Terrain (pixi)'", description = "Register a Jupyter kernel for this env." }

# Container build pipeline. `pixi run image` is the single command for the
# release-engineer audience.
build-oci = { cmd = "podman build -t karst-terrain-classification:latest -f Containerfile .", description = "Build the OCI image with podman." }
image = { depends-on = ["build-oci"], description = "Build all release artifacts (currently the OCI image)." }
